--- a/Test Narritive.csproj
+++ b/Test Narritive.csproj
@@ -89,27 +89,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Scripts\endings\Ending struct %28this is the good one\ending_decide">
+    <Content Include="Scripts\endings\Ending struct %28this is the good one\ending_decide.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\endings\Ending struct %28this is the good one\ending_final_police">
+    </Content>
+    <Content Include="Scripts\endings\Ending struct %28this is the good one\ending_final_police.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\endings\Ending struct %28this is the good one\ending_final_sleep">
+    </Content>
+    <Content Include="Scripts\endings\Ending struct %28this is the good one\ending_final_sleep.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\endings\Ending struct %28this is the good one\ending_sleep">
+    </Content>
+    <Content Include="Scripts\endings\Ending struct %28this is the good one\ending_sleep.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\endings\end_alexRest">
+    </Content>
+    <Content Include="Scripts\endings\end_alexRest.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\hi there uwu\Breathe\game_03_alexConfirmsSleep">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Scripts\hi there uwu\Breathe\game_03_breathe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="Test Narritive_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -123,6 +117,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\game_02.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\hi there uwu\Breathe\game_03_alexConfirmsSleep.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\hi there uwu\Breathe\game_03_breathe.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\hi there uwu\game_01_accident.txt">
