added the paths nd shit

--- a/Test Narritive.csproj
+++ b/Test Narritive.csproj
@@ -89,6 +89,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="Credits.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Stay out!\I mean it!\You%27ll be sorry!\Last warning!\discord.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Stay out!\I mean it!\You%27ll be sorry!\Last warning!\Fine, just friend me on discord\WOW.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\endings\Ending struct %28this is the good one\ending_decide.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
